--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maxmum-scale=1.0,user-scalable=no">
         <script type="text/javascript" src="enchant.js"></script>
         <script type="text/javascript" src="config.js"></script>
+        <script type="text/javascript" src="loadAssets.js"></script>
         <script type="text/javascript" src="growHair.js"></script>
         <script type="text/javascript" src="make_scene.js"></script>
         <script type="text/javascript" src="transition.js"></script>
