--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="enchant.js"></script>
         <script type="text/javascript" src="config.js"></script>
         <script type="text/javascript" src="loadAssets.js"></script>
+        <script type="text/javascript" src="growEffects.js"></script>
         <script type="text/javascript" src="growHair.js"></script>
         <script type="text/javascript" src="make_scene.js"></script>
         <script type="text/javascript" src="transition.js"></script>
