--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maxmum-scale=1.0,user-scalable=no">
         <script type="text/javascript" src="enchant.js"></script>
+        <script type="text/javascript" src="ui.enchant.js"></script>
         <script type="text/javascript" src="config.js"></script>
         <script type="text/javascript" src="loadAssets.js"></script>
         <script type="text/javascript" src="is_frame.js"></script>
