change: game width 560->620

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
         <script type="text/javascript" src="transition.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
-    <body></body>
+    <body style="margin: 0">
+        <div id="enchant-stage"></div>
+    </body>
 </html>
